modified skills and project info

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@ topFunction()"
     </nav>
     <div class="container row">
       <div class="profileCard col-md-8">
-        <h2>Front-End Web Developer</h2>
+        <h2>Web Developer</h2>
         <p id="profileCardBio">
-          Dedicated to writing clean code that delivers seamless, intuitive,
-          secure, and efficient experiences. I am highly adaptable and can
-          quickly find solutions with the tools and skills I have. Organization
-          and structure are my primary focuses.<br /><br />Check out my projects
-          down below!
+          Full-stack web developer with previous experience in project
+          management and team operations logistics. Dedicated to writing clean
+          code that delivers seamless, intuitive, secure, and efficient
+          experiences. I am highly adaptable and can quickly find solutions with
+          the tools and skills I have. Organization and structure are my primary
+          focus as well as learning new skills, techniques, and technologies.
+          <br /><br />Check out my projects down below!
         </p>
         <div class="buttons">
           <div class="bottom-section">
@@ -68,7 +70,7 @@ topFunction()"
               ></a>
               <div id="resumeDiv">
                 <a
-                  href="https://drive.google.com/file/d/10OP7uRitHl0674L-S9-9PiaAS5QYprB_/view"
+                  href="https://drive.google.com/file/d/1yKB2rhEnwj4kzE6z1i8dGjt4B6n6s2U4/view"
                   target="_blank"
                   ><i class="fa-solid contactLink fa-file"></i></a
                 ><span>Resume</span>
@@ -81,6 +83,7 @@ topFunction()"
           <ul>
             <li>HTML</li>
             <li>CSS</li>
+            <li>SCSS</li>
             <li>Bootstrap</li>
             <li>JavaScript</li>
             <li>React</li>
@@ -90,7 +93,9 @@ topFunction()"
             <li>MySQL</li>
             <li>Database Design</li>
             <li>OOP</li>
-            <li>RESTful API's</li>
+            <li>SDLC</li>
+            <li>REST API's</li>
+            <li>Postman</li>
             <li>Single-page Applications</li>
             <li>Test-Driven Development</li>
             <li>Swagger</li>
@@ -110,14 +115,21 @@ topFunction()"
           <p>
             GameFace is a single-page application social media platform that
             allows gamers to connect with other gamers in order to enhance their
-            gaming experience. GameFace users are able to create and personalize
-            their profile based on platform of choice, gamertags, and favorite
-            games. Additionally, GameFace users connect with posts, likes,
-            comments, and highlights. GameFace gives users the ability to find
-            gaming partners based on games played, region, skill, and play
-            style. Ultimately, GameFace is a networking solution that allows
-            users to connect and grow as gamers in a safe and inclusive
-            environment.
+            gaming experience. This project uses HTML, CSS (Bootstrap), and a
+            small scale SPA JavaScript framework to deliver the front-end. The
+            back-end was built in Java using Spring Boot and is served using
+            Amazon RDS, and Amazon S3. The relational database consists of
+            various datasets to track user activity and implements some custom
+            SQL queries which are all served through a robust REST API.
+            Utilizing Google authentication, GameFace users are able to create
+            and personalize their profile based on platform of choice,
+            gamertags, and favorite games through the RAWG API. Additionally,
+            GameFace users connect with posts, likes, comments, and highlights
+            which are served by the Filestack API. GameFace gives users the
+            ability to find gaming partners based on games played, region,
+            skill, and play style. Ultimately, GameFace is a networking solution
+            that allows users to connect and grow as gamers in a safe and
+            inclusive environment.
           </p>
           <div class="buttons">
             <div class="bottom-section">
@@ -156,11 +168,11 @@ topFunction()"
         <div class="projectCard col-lg-5">
           <h2>Hangry</h2>
           <p>
-            [In development] Hangry is a solo-project SPA that serves as a magic
+            [In Development] Hangry is a solo-project SPA that serves as a magic
             8-ball for users to find a place to eat based on the entered
-            location. The frontend is built on HTML, CSS, Bootstrap, and React.
-            The backend is built on Spring Boot using AWS and the Yelp Fusion
-            API.
+            location. The front-end is built with React, CSS, and some
+            Bootstrap. The back-end is built on Spring Boot and is served using
+            AWS and the Yelp Fusion API.
           </p>
           <div class="buttons">
             <div class="bottom-section">
@@ -269,7 +281,7 @@ topFunction()"
               <li>CSS</li>
               <li>Bootstrap</li>
               <li>JavaScript</li>
-              <li>React.js</li>
+              <li>React</li>
               <li>The Movie Database API</li>
             </ul>
           </div>
@@ -284,7 +296,7 @@ topFunction()"
             manipulation, users can add, edit, or delete movies from the
             collection through various modal prompts. The search engine makes
             use of The Movie Database API (TMDB) and Glitch to serve the
-            backend.
+            back-end.
           </p>
           <div class="buttons">
             <div class="bottom-section">
@@ -356,7 +368,7 @@ topFunction()"
           <h2>Console Adventure Game</h2>
           <p>
             Simple console based Java adventure game. This solo project allows a
-            user to create a fantasy character and embark on a
+            user to create a fantasy character and embark on a text based
             choose-your-own-adventure game built solely with Java.
           </p>
           <div class="buttons">
