--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ topFunction()"
                   target="_blank"
                   ><i class="fab projectLink fa-github"></i
                 ></a>
-                <div class="demoDiv">
+                <!-- <div class="demoDiv">
                   <a title="Demo" href="https://game-face.io/" target="_blank"
                     ><i class="fas projectLink fa-play"></i></a
                   ><span>Live</span>
-                </div>
+                </div> live site broke-->
               </div>
             </div>
           </div>
